# paddle-ocr

./: CMakeLists.txt  Dockerfile  README.md  tips
Paddle-Lite/: .gitignore
Paddle-Lite/build.lite.linux.x86.gcc/: cblas_dummy.c  kernel_src_map.h  kernels_src_list.txt  lite_libs.txt  ops_src_list.txt  paddle_api_full_bundled.ar  paddle_api_full_bundled.ar.in  paddle_api_light_bundled.ar  paddle_api_light_bundled.ar.in  supported_kernel_op_info.h
Paddle-Lite/build.lite.linux.x86.gcc/inference_lite_lib/cxx/include/: paddle_use_kernels.h
Paddle-Lite/build.lite.linux.x86.gcc/lite/api/: paddle_use_kernels.h  paddle_use_ops.h
Paddle-Lite/build.lite.linux.x86.gcc/lite/backends/x86/: warpctc_lib_path.h
Paddle-Lite/build.lite.linux.x86.gcc/lite/backends/x86/jit/: kernels.h
Paddle-Lite/build.lite.linux.x86.gcc/lite/core/: framework.pb.cc  version.h
Paddle-Lite/build.lite.linux.x86.gcc/lite/utils/: utils_dummy.c
Paddle-Lite/build.lite.linux.x86.gcc/lite/utils/utils.dir/: glog.objlist
src/: main.cpp
